# kubectl-ssm

./: Cargo.toml  README.md
src/: main.rs
src/aws/: mod.rs
src/kube/: mod.rs
