[package]
name = "kubectl-ssm"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.6.2", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.128.0"
tokio = { version = "1", features = ["full"] }
kube = { version = "0.99.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
rustls = { version = "0.23.5", features = ["default"] }
regex = "1.10"
colored = "2.0"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
